update styling, brute convert to tachyons

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,4 @@
-pygments: true
-server: true
-auto: true
+highlighter: true
 safe: true
 url: http://donaldmerand.com
 exclude: ["CNAME", "README.md"]
